# estuary

./: .dockerignore  .gitignore  Cargo.toml  dev.Dockerfile  docker-compose.yaml  package.json  tailwind.config.js
initdb/: create_tables.sql
src/: auth.rs  cli.rs  database.rs  errors.rs  handlers.rs  main.rs  test_helpers.rs
src/handlers/: frontend.rs  git.rs  registry.rs
styles/: tailwind.css
templates/: base.html  login.html  user.html
